// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "add",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 10,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "equal",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "branchIfTrue",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 10,
      "lineNumberBeforeMacroExpansion": 10,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
    {
      "arguments": [],
      "instruction": "add",
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 13,
      "lineNumberBeforeMacroExpansion": 13,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "lineNumberAfterMacroExpansion": 14,
      "lineNumberBeforeMacroExpansion": 14,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 16,
      "lineNumberBeforeMacroExpansion": 16,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.load
        i32.const 10
        i32.eq
        br_if 1 (;@1;)
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;
